--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,197 +1,99 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: lightskyblue;
-  }
-  
-  span {
-    line-height: auto;
-  }
-  
-  .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-  }
-  
-  .modal_content {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 1rem;
-    border: 1px solid ghostwhite;
-    border-radius: 10px;
-    box-sizing: border-box;
-    width: 480px;
-    background-color: ghostwhite;
-  }
-  
-  .modal_content div>p {
-    margin-bottom: 1rem;
-  }
-  
-  .modal_form {
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap; 
-    width: 100%;
-    box-sizing: border-box;
-    margin-top: auto;
-  }
-  
-  .timeline_form {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    padding: 2rem;
-    align-items: end;
-    background-color: steelblue;
-  }
-  
-  .modal_form_controls {
-    align-self: end;
-  }
-  
-  .modal_input {
-    box-sizing: border-box;
-    align-self: stretch;
-    border: 1px solid ghostwhite;
-    border-radius: 10px;
-    padding: 1.0rem 0.5rem;
-    margin-bottom: 1rem;
-    resize: none;
-  }
-  
-  .modal_footer {
-    margin-bottom: 1rem;
-    color: red;
-    font-size: 0.625rem;
-  }
-  
-  .modal_button {
-    padding: 0.5rem 1rem;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-sizing: border-box;
-  }
-  
-  button:hover {
-    cursor: pointer;
-    box-shadow: inset 0 0 5px;
-  } 
-  
-  button:focus {
-    box-shadow: 0 0 5px;
-  }
-  
-  .timeline_widget {
-    min-width: 480px;
-    padding: 1rem;
-    background-color: lightskyblue;
-  }
-  
-  .timeline_posts {
-    padding: 1rem 1rem 7rem 1rem;
-    font-size: 0.625rem;
-    display: flex;
-    flex-direction: column;  
-  }
-  
-  .post_content {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin-top: 1rem;
-    border: solid 1px plum;
-    border-radius: 10px;
-    padding: 1rem;
-    background-color: plum;
-  }
-  
-  .post_content span:first-child {
-    align-self: end;
-  }
-  
-  .post_content div {
-    margin-bottom: 0.5rem;
-    font-size: 1rem;
-    overflow: auto;
-  }
-  
-  .video_player {  
-      text-align: center;
-      width: 100%;
-      box-sizing: border-box;
-      margin-top: auto;
-      position: fixed;
-      bottom: 7rem;
-      left: 0;
-      padding: 2rem 2rem 0 2rem;
-      background-color: steelblue;
-    }
-  
-  .timeline_input {
-    border-radius: 10px;
-    align-self: stretch;
-    padding: 1rem;
-    resize: none;
-  }
-  
-  .timeline_controls {
-    display: flex;
-    position: absolute;
-    z-index: 1;
-    right: 2rem;
-  }
-  
-  .timeline_button {  
-    min-width: 2rem;
-    min-height: 2rem;
-    margin-right: 1rem;
-    background-color: lightgray;
-    border: 1px solid lightgray;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .timeline_button:hover {
-    background-color: lightgreen;
-    border-color: lightgreen;
-    font-weight: bold;
-  } 
-  
-  .timeline_record_time {
-    margin-right: 1rem;
-    padding: 0.5rem 0;
-  }
-  
-  .timeline_record_time span {
-    vertical-align: middle;
-  }
-  
-  .invalid {
-    border: 1px solid red;
-  }
-  
-  .hidden {
-    display: none;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Comfortaa', sans-serif;
+}
+
+.container {
+  position: relative;
+  width: 500px;
+  height: calc(100vh - 60px);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 20px 30px;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  overflow-y: scroll;
+}
+
+.button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  font-family: inherit;
+  background-color: darkmagenta;
+  border: none;
+  border-radius: 0.3rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.button:focus {
+  box-shadow: 0 0 0 0.2rem rgba(139, 0, 139, 0.5);
+}
+
+.timeline-input {
+  position: fixed;
+  bottom: 60px;
+  width: 440px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  width: 440px;
+  border: 1px solid rgba(139, 0, 139, 0.5);
+  border-radius: 0.25rem;
+  background-color: #fff;
+  padding: 20px 30px;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal > * {
+  flex-basis: 100%;
+}
+
+.geoposition-modal__title,
+.geoposition-modal__description {
+  margin-bottom: 15px;
+}
+
+.geoposition-modal__cancel-button,
+.geoposition-modal__ok-button {
+  flex-basis: auto;
+  margin-bottom: 0;
+  margin-right: 20px;
+}
+
+.error-message {
+  color: red;
+}
+
+.timeline__item {
+  border: 1px solid rgba(139, 0, 139, 0.5);
+  border-radius: 0.25rem;
+  padding: 20px 30px;
+  margin-top: 10px;
+}
+
+.timeline__item-time {
+  margin-top: 10px;
+}
+
+.timeline__item-time,
+.timeline__item-coords {
+  font-size: 12px;
+}
